<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signupViewModel"
            type="com.perennialsys.weather.viewmodels.SignUpViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_app_name_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:shadowColor="@color/black"
                android:shadowRadius="15"
                android:text="@string/perennialsys_weather"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:fontFamily="@font/aclonica" />

            <EditText
                android:id="@+id/et_full_name_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded_corner_white_background"
                android:hint="@string/full_name"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:text="@={signupViewModel.fullName}"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color_gray" />

            <EditText
                android:id="@+id/et_email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner_white_background"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:text="@={signupViewModel.userEmailLiveData}"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color_gray" />

            <EditText
                android:id="@+id/et_username_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner_white_background"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:text="@={signupViewModel.uniqueUserNameLiveData}"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color_gray" />

            <EditText
                android:id="@+id/et_password_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner_white_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:text="@={signupViewModel.userPassword}"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color_gray" />

            <EditText
                android:id="@+id/et_confirm_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner_white_background"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:text="@={signupViewModel.userConfirmPassword}"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color_gray" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_corner_white_background"
                android:backgroundTint="@color/dark_blue"
                android:paddingVertical="5dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</layout>